# mocked-up

./: .gitignore  CHANGELOG.md  Cargo.toml
mock_object/: Cargo.toml
mock_object/src/: attr_args.rs  lib.rs  mock_object_impl.rs  mock_template.rs
mock_object/tests/: mock_object_test.rs
mock_object/tests/cases/failure/invalid_arg_types/: invalid_arg_types.rs  invalid_arg_types.stderr
mock_object/tests/cases/failure/invalid_args_count/: invalid_args_count.rs  invalid_args_count.stderr
mock_object/tests/cases/failure/invalid_syntax_arg/: invalid_syntax_arg.rs  invalid_syntax_arg.stderr
mock_object/tests/cases/failure/invalid_syntax_brackets/: invalid_syntax_brackets.rs  invalid_syntax_brackets.stderr
mock_object/tests/cases/failure/invalid_syntax_no_list/: invalid_syntax_no_list.rs  invalid_syntax_no_list.stderr
mock_object/tests/cases/failure/no_constructor/: no_constructor.rs  no_constructor.stderr
mock_object/tests/cases/success/: happy_no_args.rs  happy_with_args.rs
mocked-up/: Cargo.toml
mocked-up/src/: lib.rs  mock_error.rs  temp_dir.rs  temp_env.rs  temp_file.rs
mocked-up/tests/: temp_dir.rs  temp_file.rs
