[package]
name = "mock_object"
version = "0.0.0"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "Macro for generating constructor methods to mock objects."
license  = "MIT OR Apache-2.0"
repository = "https://github.com/nraynes/mocked-up"
keywords = ["mock", "framework", "rust", "project", "tools"]
categories = ["development-tools"]
include = [
    "src/",
    "Cargo.toml",
    "../LICENSES/",
    "../LICENSE",
    "../README.md",
    "../CHANGELOG.md",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.116"
